--- a/nginx-php.yml
+++ b/nginx-php.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   web:
     image: nginx:alpine
+    container_name: nginx
     ports:
       - "80:80"
       - "443:443"
@@ -18,6 +19,7 @@ services:
       - php
   php:
     image: php:fpm-alpine
+    container_name: php
     restart: always
     volumes:
       - ./code:/var/www
