--- a/nginx-php-mysql.yml
+++ b/nginx-php-mysql.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   web:
     image: nginx:alpine
+    container_name: nginx
     ports:
       - "80:80"
       - "443:443"
@@ -21,6 +22,7 @@ services:
       context: ./conf/php
       dockerfile: Dockerfile
     restart: always
+    container_name: php
     volumes:
       - ./code:/var/www
       - ./conf/php/php.ini:/usr/local/etc/php/php.ini
@@ -30,6 +32,7 @@ services:
       - mysql
   mysql:
     image: mysql:latest
+    container_name: mysql
     restart: always
     volumes:
       - ./mysql/data:/var/lib/mysql
