--- a/conf/php/Dockerfile
+++ b/conf/php/Dockerfile
@@ -1,2 +1,5 @@
 FROM php:fpm-alpine
-RUN docker-php-ext-install pdo_mysql
+RUN apk add --no-cache libpng libpng-dev libjpeg-turbo-dev libwebp-dev zlib-dev libxpm-dev \
+    && docker-php-ext-install gd \
+    && apk del libpng-dev libjpeg-turbo-dev libwebp-dev zlib-dev libxpm-dev \
+    && docker-php-ext-install pdo_mysql
