--- a/conf/mysql/my.cnf
+++ b/conf/mysql/my.cnf
@@ -3,3 +3,4 @@ default-authentication-plugin=mysql_native_password
 slow_query_log=1
 slow_query_log_file=/var/log/mysql/slow_queries.log
 long_query_time=1
+sql-mode="NO_ENGINE_SUBSTITUTION"
