--- a/conf/mysql/my.cnf
+++ b/conf/mysql/my.cnf
@@ -1,4 +1,5 @@
 [mysqld]
+default-time-zone='America/Chicago'
 default-authentication-plugin=mysql_native_password
 slow_query_log=1
 slow_query_log_file=/var/log/mysql/slow_queries.log
