--- a/nginx.yml
+++ b/nginx.yml
@@ -12,4 +12,5 @@ services:
       - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./conf/nginx/php.conf:/etc/nginx/php.conf
       - ./conf/nginx/site:/etc/nginx/sites-enabled
+      - ./log/nginx:/var/log/nginx
       - /etc/letsencrypt:/etc/letsencrypt
