--- a/nginx-php.yml
+++ b/nginx-php.yml
@@ -12,6 +12,7 @@ services:
       - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./conf/nginx/php.conf:/etc/nginx/php.conf
       - ./conf/nginx/site:/etc/nginx/sites-enabled
+      - ./log/nginx:/var/log/nginx
       - /etc/letsencrypt:/etc/letsencrypt
     networks:
       - code-network
