--- a/conf/php/Dockerfile
+++ b/conf/php/Dockerfile
@@ -2,4 +2,4 @@ FROM php:fpm-alpine
 RUN apk add --no-cache libpng libpng-dev libjpeg-turbo-dev libwebp-dev zlib-dev libxpm-dev \
     && docker-php-ext-install gd \
     && apk del libpng-dev libjpeg-turbo-dev libwebp-dev zlib-dev libxpm-dev \
-    && docker-php-ext-install pdo_mysql
+    && docker-php-ext-install pdo_mysql bcmath
