--- a/conf/mysql/my.cnf
+++ b/conf/mysql/my.cnf
@@ -1,7 +1,8 @@
 [mysqld]
-default-time-zone='America/Chicago'
-default-authentication-plugin=mysql_native_password
-slow_query_log=1
-slow_query_log_file=/var/log/mysql/slow_queries.log
-long_query_time=1
-sql-mode="NO_ENGINE_SUBSTITUTION"
+skip-grant-tables
+#default-time-zone='America/Chicago'
+#default-authentication-plugin=mysql_native_password
+#slow_query_log=1
+#slow_query_log_file=/var/log/mysql/slow_queries.log
+#long_query_time=1
+#sql-mode="NO_ENGINE_SUBSTITUTION"
