--- a/nginx-php-mysql.yml
+++ b/nginx-php-mysql.yml
@@ -34,7 +34,7 @@ services:
   mysql:
     image: mysql:latest
     container_name: mysql
-    command: --default-authentication-plugin=mysql_native_password
+    # command: --default-authentication-plugin=mysql_native_password
     restart: always
     volumes:
       - ./mysql/data:/var/lib/mysql
