--- a/conf/nginx/site/site.conf.example
+++ b/conf/nginx/site/site.conf.example
@@ -15,6 +15,9 @@ server {
         #listen 443 ssl;  # ssl only
         #listen 443 ssl spdy;  # ssl with spdy
         #listen 443 ssl http2; # ssl with http2, supported by v1.9.5
+        # use following 2 lines instead of the one above for http2 starting form v1.25.1
+        #listen 443 ssl;
+        #http2 on;
         #ssl_certificate /etc/letsencrypt/live/domain.tld/fullchain.pem;
         #ssl_certificate_key /etc/letsencrypt/live/domain.tld/privkey.pem;
 
