--- a/conf/php/php-fpm.conf
+++ b/conf/php/php-fpm.conf
@@ -1,5 +1,11 @@
 [global]
-daemonize = no
+;daemonize = no
 
 [www]
-listen = 9000
+;listen = 9000
+;pm = dynamic
+;pm.max_children = 5
+;pm.start_servers = 2
+;pm.min_spare_servers = 1
+;pm.max_spare_servers = 3
+;pm.max_requests = 500
