--- a/conf/php/Dockerfile
+++ b/conf/php/Dockerfile
@@ -14,6 +14,8 @@
 
 # To add soap extension, do "apk add libxml2-dev && docker-php-ext-install soap"  Add ~1MB
 
+# To add exif extension, do "docker-php-ext-install exif" <1MB
+
 FROM php:fpm-alpine
 RUN apk add --no-cache libpng libpng-dev libjpeg-turbo-dev libwebp-dev zlib-dev libxpm-dev \
     && docker-php-ext-install gd bcmath pdo_mysql \
