--- a/conf/php/Dockerfile
+++ b/conf/php/Dockerfile
@@ -1,20 +1,33 @@
-# To install PHP intl extension, need to run "apk add icu-dev" first, and it CANNOT be deleted after installation
-# Then run "docker-php-ext-configure intl && docker-php-ext-install intl".  Will add ~43MB to image
+# To add PHP intl extension
+# `apk add icu-dev && docker-php-ext-configure intl && docker-php-ext-install intl`
+# "icu-dev" CANNOT be deleted after installation. Add ~43MB to image
 
-# To install Wordpress site, need to add "docker-php-ext-install mysqli && docker-php-ext-enable mysqli"
+# To install Wordpress site
+# `docker-php-ext-install mysqli && docker-php-ext-enable mysqli`
 
-# To add PostgreSQL support, need to run "apk add postgresql-libs postgresql-dev" then "docker-php-ext-install pgsql pdo_pgsql".
-# "postgresql-dev" can be deleted after installation.  Will add ~12MB to image.  "pgsql" is optional if only use PDO, but only add ~0.2MB
+# To add PostgreSQL support
+# `apk add postgresql-libs postgresql-dev && docker-php-ext-install pgsql pdo_pgsql && apk del postgresql-dev`
+# Add ~12MB to image.  "pgsql" is optional if only use PDO, but only add ~0.2MB
 
-# To add imagick extension, need to "apk add autoconf g++ make imagemagick-dev \ 
-# && pecl install imagick && docker-php-ext-enable imagick && rm -rf /tmp/pear && apk del g++ make"
-# "imagemagick-dev" CANNOT be deleted after installation
+# To add imagick extension
+# `apk add autoconf g++ make imagemagick-dev && pecl install imagick && docker-php-ext-enable imagick && rm -rf /tmp/pear && apk del g++ make`
+# "imagemagick-dev" CANNOT be deleted after installation.  Add ~17MB to image
 
-# To add zip extension, do "apk add zip libzip-dev && docker-php-ext-configure zip && docker-php-ext-install zip" Add ~2MB
+# To add zip extension
+# `apk add zip libzip-dev && docker-php-ext-configure zip && docker-php-ext-install zip`
+# Add ~2MB to image
 
-# To add soap extension, do "apk add libxml2-dev && docker-php-ext-install soap"  Add ~1MB
+# To add soap extension
+# `apk add libxml2-dev && docker-php-ext-install soap`
+# Add ~1MB to image
 
-# To add exif extension, do "docker-php-ext-install exif" <1MB
+# To add exif extension
+# `docker-php-ext-install exif`
+# Add <1MB to image
+
+# To add opcache extension
+# `docker-php-ext-install opcache`
+# Add ~1MB to image
 
 FROM php:fpm-alpine
 RUN apk add --no-cache libpng libpng-dev libjpeg-turbo-dev libwebp-dev zlib-dev libxpm-dev \
