--- a/conf/mysql/my.cnf
+++ b/conf/mysql/my.cnf
@@ -1,7 +1,9 @@
 [mysqld]
 #skip-grant-tables
 default-time-zone='America/Chicago'
-# following line is disabled from v8.4.0, but required before that
+# use following line from v8.4.0
+mysql-native-password=ON
+# use following line for version <8.4.0
 #default-authentication-plugin=mysql_native_password
 slow_query_log=1
 slow_query_log_file=/var/log/mysql/slow_queries.log
