--- a/conf/php/php.ini
+++ b/conf/php/php.ini
@@ -1394,17 +1394,17 @@ session.cookie_path = /
 
 ; The domain for which the cookie is valid.
 ; http://php.net/session.cookie-domain
-session.cookie_domain =
+session.cookie_domain = ""
 
 ; Whether or not to add the httpOnly flag to the cookie, which makes it
 ; inaccessible to browser scripting languages such as JavaScript.
 ; http://php.net/session.cookie-httponly
-session.cookie_httponly =
+session.cookie_httponly = 1
 
 ; Add SameSite attribute to cookie to help mitigate Cross-Site Request Forgery (CSRF/XSRF)
 ; Current valid values are "Lax" or "Strict"
 ; https://tools.ietf.org/html/draft-west-first-party-cookies-07
-session.cookie_samesite =
+session.cookie_samesite = "Strict"
 
 ; Handler used to serialize data. php is the standard serializer of PHP.
 ; http://php.net/session.serialize-handler
