--- a/chainguard-nginx-php.yaml
+++ b/chainguard-nginx-php.yaml
@@ -1,14 +1,14 @@
-version: "3"
 services:
   web:
-    image: cgr.dev/chainguard/nginx
+    image: cgr.dev/chainguard/nginx:latest
     container_name: nginx
+    working_dir: /var/www
     ports:
       - "80:80"
       - "443:443"
     restart: always
     volumes:
-      - ./code:/app
+      - ./code:/var/www
       - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./conf/nginx/php.conf:/etc/nginx/php.conf
       - ./conf/nginx/site:/etc/nginx/sites-enabled
@@ -21,12 +21,12 @@ services:
   php:
     image: cgr.dev/chainguard/php:latest-fpm
     container_name: php
-    working_dir: /app
+    working_dir: /var/www
     restart: always
     volumes:
-      - ./code:/app
-      - ./conf/php/php.ini:/usr/local/etc/php/php.ini
-      - ./conf/php/php-fpm.conf:/usr/local/etc/php-fpm.d/zzz-php-fpm.conf
+      - ./code:/var/www
+      - ./conf/php/php.ini:/etc/php/php.ini
+      - ./conf/php/php-fpm.conf:/etc/php/php-fpm.d/zzz-php-fpm.conf
     networks:
       - code-network
 
