--- a/conf/mysql/my.cnf
+++ b/conf/mysql/my.cnf
@@ -1,11 +1,11 @@
 [mysqld]
 #skip-grant-tables
-default-time-zone='America/Chicago'
+default_time_zone='America/Chicago'
 # use following line from v8.4.0
-mysql-native-password=ON
+mysql_native_password=ON
 # use following line for version <8.4.0
-#default-authentication-plugin=mysql_native_password
+#default_authentication_plugin=mysql_native_password
 slow_query_log=1
 slow_query_log_file=/var/log/mysql/slow_queries.log
 long_query_time=1
-sql-mode="NO_ENGINE_SUBSTITUTION"
+sql_mode="NO_ENGINE_SUBSTITUTION"
