--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -13,6 +13,7 @@ http {
     error_log /var/log/nginx/error.log;
     keepalive_timeout  65;
     keepalive_requests 200;
+    # set "sendfile off" if changes not showing for dev server
     sendfile on;
     tcp_nopush on;
     client_max_body_size 50M;
@@ -34,6 +35,7 @@ http {
     reset_timedout_connection on;
     server_names_hash_bucket_size 100;
 
+    # set "open_file_cache off" and comment out all following open_file_cache lines if changes not showing for dev server
     open_file_cache max=5000 inactive=30s;
     open_file_cache_valid    60s;
     open_file_cache_min_uses 3;
